# gpu-switcher

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
daemon/: Cargo.toml
daemon/src/: automode.rs  config.rs  dbus.rs  main.rs  ppd.rs  sysfs.rs  upower.rs
packaging/: gpu-switcher.service  install.sh  net.gpuswitcher.Manager.conf  net.gpuswitcher.Manager.service  net.gpuswitcher.policy
plasmoid/package/: metadata.json
plasmoid/package/contents/config/: main.xml
plasmoid/package/contents/ui/: ConfigGeneral.qml  FullRepresentation.qml  main.qml
